tests/ui/privacy/private-inferred-type-3.stderr
error: type `{fn item ext::priv_fn: fn()}` is private
  --> $DIR/private-inferred-type-3.rs:16:5
   |
LL |     ext::m!();
   |     ^^^^^^^^^ private type
   |
   = note: this error originates in the macro `ext::m` (in Nightly builds, run with -Z macro-backtrace for more info)

error: static `ext::PRIV_STATIC` is private
  --> $DIR/private-inferred-type-3.rs:16:5
   |
LL |     ext::m!();
   |     ^^^^^^^^^ private static
   |
   = note: this error originates in the macro `ext::m` (in Nightly builds, run with -Z macro-backtrace for more info)

error: type `ext::PrivEnum` is private
  --> $DIR/private-inferred-type-3.rs:16:5
   |
LL |     ext::m!();
   |     ^^^^^^^^^ private type
   |
   = note: this error originates in the macro `ext::m` (in Nightly builds, run with -Z macro-backtrace for more info)

error: type `{fn item <u8 as ext::PrivTrait>::method: fn()}` is private
  --> $DIR/private-inferred-type-3.rs:16:5
   |
LL |     ext::m!();
   |     ^^^^^^^^^ private type
   |
   = note: this error originates in the macro `ext::m` (in Nightly builds, run with -Z macro-backtrace for more info)

error: type `{fn item ext::PrivTupleStruct: fn(u8) -> ext::PrivTupleStruct}` is private
  --> $DIR/private-inferred-type-3.rs:16:5
   |
LL |     ext::m!();
   |     ^^^^^^^^^ private type
   |
   = note: this error originates in the macro `ext::m` (in Nightly builds, run with -Z macro-backtrace for more info)

error: type `{fn item PubTupleStruct: fn(u8) -> PubTupleStruct}` is private
  --> $DIR/private-inferred-type-3.rs:16:5
   |
LL |     ext::m!();
   |     ^^^^^^^^^ private type
   |
   = note: this error originates in the macro `ext::m` (in Nightly builds, run with -Z macro-backtrace for more info)

error: type `{fn item Pub::<u8>::priv_method: for<'a> fn(&'a Pub<u8>)}` is private
  --> $DIR/private-inferred-type-3.rs:16:5
   |
LL |     ext::m!();
   |     ^^^^^^^^^ private type
   |
   = note: this error originates in the macro `ext::m` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 7 previous errors

